# ricci

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
docs/: papers.md
examples/: README.md  attention_bias_tropical.rs  burn_poincare_smoke.rs  cora_node_classification.rs  hgcn_smoke.rs  inductive_link_prediction.rs  test_time_adapter.rs
proptest-regressions/: hyperbolic.txt
scripts/: fetch_citeseer.sh  fetch_cora.sh  fetch_grail_fb237v1.sh  inspect_inductive_predictions.py  run_inductiveeval.sh  setup_inductiveeval.sh  summarize_inductive_predictions.py
src/: curvature.rs  features.rs  hyperbolic.rs  lib.rs  nn.rs  relgraph.rs  scatter.rs
tests/: gcn_forward.rs
