[package]
name = "propago"
version = "0.2.0"
edition = "2021"
description = "Graph Neural Network primitives and training loops"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/propago"
homepage = "https://github.com/arclabs561/propago"
documentation = "https://docs.rs/propago"
keywords = ["gnn", "graph", "neural-network"]
categories = ["science", "algorithms"]

[features]
default = []

[dependencies]
burn = { version = "0.20.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.20.0", default-features = true }

# Utils
rand = "0.9"
thiserror = "2.0"

[dev-dependencies]
ndarray = "0.16"
proptest = "1.5"
hyperball = "0.1"
