[package]
name = "ricci"
version = "0.7.0"
edition = "2021"
description = "Graph neural network primitives: GCN and hyperbolic GCN on Burn tensors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/ricci"
homepage = "https://github.com/arclabs561/ricci"
documentation = "https://docs.rs/ricci"
keywords = ["gnn", "graph", "neural-network"]
categories = ["science", "algorithms"]

[workspace]

[features]
default = []

[dependencies]
burn = { version = "0.20.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.20.0", default-features = true }
# The curvature module composes the ecosystem's primitives: random-walk
# measures (lapl), hop distances (graphops), entropic W1 (wass).
graphops = "0.5"
lapl = "0.1"
ndarray = "0.16"
wass = "0.2"

[dev-dependencies]
proptest = "1.5"
hyperball = "0.1"
# Enable autodiff for the training example (dev-only; lib stays inference-only).
# Cargo unifies these features with the normal `burn` dep when building ricci's
# own examples/tests, without affecting downstream consumers.
burn = { version = "0.20.0", default-features = false, features = ["std", "autodiff"] }
